force-app/main/default/objects/Contact/fields/Account_ARR__c.field-meta.xml
<CustomField>
    <fullName>Account_ARR__c</fullName>
    <description>MIS-4298</description>
    <formula>Account.fr_ARR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account ARR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>