force-app/main/default/objects/Contact/fields/Account_Customer_Success_Manager__c.field-meta.xml
<CustomField>
    <fullName>Account_Customer_Success_Manager__c</fullName>
    <description>MIS-4298</description>
    <formula>Account.Assigned_CSA_Name__r.FirstName +&quot; &quot;+ Account.Assigned_CSA_Name__r.LastName</formula>
    <label>Account Customer Success Manager</label>
    <type>Text</type>
</CustomField>