force-app/main/default/objects/Contact/fields/Account_name__c.field-meta.xml
<CustomField>
    <fullName>Account_name__c</fullName>
    <description>MIS-816 Intercom Related field</description>
    <formula>Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account name</label>
    <type>Text</type>
</CustomField>