force-app/main/default/objects/Contact/fields/Account_owner_reassigned__c.field-meta.xml
<CustomField>
    <fullName>Account_owner_reassigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account owner was reassigned</label>
    <type>Checkbox</type>
</CustomField>