force-app/main/default/objects/Contact/fields/Actionable_Date__c.field-meta.xml
<CustomField>
    <fullName>Actionable_Date__c</fullName>
    <label>Actionable Date</label>
    <type>DateTime</type>
</CustomField>