force-app/main/default/objects/Contact/fields/affectlayer__IsCreatedByChorusZI__c.field-meta.xml
<CustomField>
    <fullName>affectlayer__IsCreatedByChorusZI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field indicates whether the contact was created by Chorus or Zoominfo.</description>
    <label>Created by ChorusZI</label>
    <type>Checkbox</type>
</CustomField>