force-app/main/default/objects/Contact/fields/Agency_Role__c.field-meta.xml
<CustomField>
    <fullName>Agency_Role__c</fullName>
    <label>Agency Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ad Operations / Programmatic</fullName>
            </value>
            <value>
                <fullName>Analytics</fullName>
            </value>
            <value>
                <fullName>Client Service (Account Management)</fullName>
            </value>
            <value>
                <fullName>Data &amp; eCommerce Planning</fullName>
            </value>
            <value>
                <fullName>Digital &amp; Performance (Search, Display, Affiliates)</fullName>
            </value>
            <value>
                <fullName>Finance &amp; Procurement</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Market Research &amp; Audience Insight</fullName>
            </value>
            <value>
                <fullName>Media Planning &amp; Buying</fullName>
            </value>
            <value>
                <fullName>New Business</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Strategy &amp; Account Planning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>