force-app/main/default/objects/Contact/fields/AlignedPkg__Aligned_Source__c.field-meta.xml
<CustomField>
    <fullName>AlignedPkg__Aligned_Source__c</fullName>
    <description>Aligned Contact Source</description>
    <label>Aligned Contact Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aligned Room</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>