force-app/main/default/objects/Contact/fields/API_apllication_plan__c.field-meta.xml
<CustomField>
    <fullName>API_apllication_plan__c</fullName>
    <label>API apllication plan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>