force-app/main/default/objects/Contact/fields/API_Interest__c.field-meta.xml
<CustomField>
    <fullName>API_Interest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MIS-5456</description>
    <label>API Interest</label>
    <type>Checkbox</type>
</CustomField>