force-app/main/default/objects/Contact/fields/API_last_60_days__c.field-meta.xml
<CustomField>
    <fullName>API_last_60_days__c</fullName>
    <label>API last 60 days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>