force-app/main/default/objects/Contact/fields/API_trial__c.field-meta.xml
<CustomField>
    <fullName>API_trial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>API trial</label>
    <type>Checkbox</type>
</CustomField>