force-app/main/default/objects/Contact/fields/App_Web_Form_Counter__c.field-meta.xml
<CustomField>
    <fullName>App_Web_Form_Counter__c</fullName>
    <defaultValue>0</defaultValue>
    <label>App Web Form Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>