force-app/main/default/objects/Contact/fields/Apple_App_MDU__c.field-meta.xml
<CustomField>
    <fullName>Apple_App_MDU__c</fullName>
    <label>Apple App MDU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>