force-app/main/default/objects/Contact/fields/Asset_type__c.field-meta.xml
<CustomField>
    <fullName>Asset_type__c</fullName>
    <label>Asset type</label>
    <type>TextArea</type>
</CustomField>