force-app/main/default/objects/Contact/fields/AUM__c.field-meta.xml
<CustomField>
    <fullName>AUM__c</fullName>
    <label>AUM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Under $250M</fullName>
            </value>
            <value>
                <fullName>$250M - $500M</fullName>
            </value>
            <value>
                <fullName>$500M - $1B</fullName>
            </value>
            <value>
                <fullName>Above $1B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>