force-app/main/default/objects/Contact/fields/Auto_Reassign__c.field-meta.xml
<CustomField>
    <fullName>Auto_Reassign__c</fullName>
    <label>Auto Reassign</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MIR</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>