force-app/main/default/objects/Contact/fields/Average_Confidence_Score__c.field-meta.xml
<CustomField>
    <fullName>Average_Confidence_Score__c</fullName>
    <description>MIS-4622</description>
    <formula>Account.Average_Confidence_Score__c</formula>
    <label>Average Confidence Score</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>