force-app/main/default/objects/Contact/fields/Bad_Number__c.field-meta.xml
<CustomField>
    <fullName>Bad_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MIS-6344</description>
    <label>Bad Number</label>
    <type>Checkbox</type>
</CustomField>