force-app/main/default/objects/Contact/fields/BAR_Contact_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>BAR_Contact_Review_Date__c</fullName>
    <description>MIS-5124</description>
    <label>BAR Contact Review Date</label>
    <type>Date</type>
</CustomField>