force-app/main/default/objects/Contact/fields/Behavioral_Rate_Counter__c.field-meta.xml
<CustomField>
    <fullName>Behavioral_Rate_Counter__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Behavioral Rate Counter</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>