force-app/main/default/objects/Contact/fields/Behavioral_Rate_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Behavioral_Rate_Timestamp__c</fullName>
    <label>Behavioral Rate Timestamp</label>
    <type>DateTime</type>
</CustomField>