force-app/main/default/objects/Contact/fields/BI_Data_SFDC_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>BI_Data_SFDC_Account_Id__c</fullName>
    <description>MIS-4728</description>
    <formula>BI_Data__r.BI_Data_SFDC_Account_Id__c</formula>
    <label>BI Data - SFDC Account Id</label>
    <type>Text</type>
</CustomField>