force-app/main/default/objects/Contact/fields/bi_help_field__c.field-meta.xml
<CustomField>
    <fullName>bi_help_field__c</fullName>
    <formula>Id &lt;&gt;LEFT(BI_Data__r.Related_Record_18_ID__c,15)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>bi help field</label>
    <type>Checkbox</type>
</CustomField>