force-app/main/default/objects/Contact/fields/Bill_To__c.field-meta.xml
<CustomField>
    <fullName>Bill_To__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bill To</label>
    <type>Checkbox</type>
</CustomField>