force-app/main/default/objects/Contact/fields/blog_optin__c.field-meta.xml
<CustomField>
    <fullName>blog_optin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>blog optin</label>
    <type>Checkbox</type>
</CustomField>