force-app/main/default/objects/Contact/fields/Booking_Status_CP__c.field-meta.xml
<CustomField>
    <fullName>Booking_Status_CP__c</fullName>
    <description>MIS-388</description>
    <label>Booking Status CP</label>
    <type>TextArea</type>
</CustomField>