force-app/main/default/objects/Contact/fields/Bounce_Rate__c.field-meta.xml
<CustomField>
    <fullName>Bounce_Rate__c</fullName>
    <formula>Account.sw_connector__swId__r.sw_connector__Bounce_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bounce Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>