force-app/main/default/objects/Contact/fields/Bucket__c.field-meta.xml
<CustomField>
    <fullName>Bucket__c</fullName>
    <label>Bucket</label>
    <type>TextArea</type>
</CustomField>