force-app/main/default/objects/Contact/fields/Business_Line_Giro__c.field-meta.xml
<CustomField>
    <fullName>Business_Line_Giro__c</fullName>
    <label>Business Line (Giro)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INFORMACIÓN Y COMUNICACIONES</fullName>
            </value>
            <value>
                <fullName>ACTIVIDADES FINANCIERAS Y DE SEGUROS</fullName>
            </value>
            <value>
                <fullName>ENSEÑANZA</fullName>
            </value>
            <value>
                <fullName>ACTIVIDADES PROFESIONALES, CIENTIFICAS Y TÉCNICAS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>