force-app/main/default/objects/Contact/fields/CAB_Member__c.field-meta.xml
<CustomField>
    <fullName>CAB_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>CAB stands for Customer Advisory Board. The contact that has &apos;true&apos; in this field means he is part of the board.</inlineHelpText>
    <label>SimilarLabs</label>
    <type>Checkbox</type>
</CustomField>