force-app/main/default/objects/Contact/fields/Cadence_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Cadence_Identifier__c</fullName>
    <label>Cadence Identifier</label>
    <length>18</length>
    <type>Text</type>
</CustomField>