force-app/main/default/objects/Contact/fields/Calendly_Link__c.field-meta.xml
<CustomField>
    <fullName>Calendly_Link__c</fullName>
    <description>&quot;https://calendly.com/&quot; + 
Owner.FirstName + 
&quot;-&quot; + 
Owner.LastName + 
&quot;/15min&quot;</description>
    <formula>Owner.Calndely_Link__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calendly Link</label>
    <type>Text</type>
</CustomField>