force-app/main/default/objects/Contact/fields/Campaign_Description__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Description__c</fullName>
    <description>use this field whenever we will upload lists manually to Pardot and then push it to SFDC</description>
    <label>Campaign Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>