force-app/main/default/objects/Contact/fields/Campaign_Member_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Member_Created_Date__c</fullName>
    <description>MIS-7645</description>
    <label>Campaign Member Created Date</label>
    <type>DateTime</type>
</CustomField>