force-app/main/default/objects/Contact/fields/Campaign_Member_Status__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Member_Status__c</fullName>
    <description>MIS-7645</description>
    <label>Campaign Member Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>