force-app/main/default/objects/Contact/fields/Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Name__c</fullName>
    <description>use this field whenever we will upload lists manually to Pardot and then push it to SFDC</description>
    <label>Campaign Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>