force-app/main/default/objects/Contact/fields/Campaign_Source_UTM__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Source_UTM__c</fullName>
    <label>Campaign Source (UTM)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>