force-app/main/default/objects/Contact/fields/Campaign_Type__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Type__c</fullName>
    <description>MIS-7645</description>
    <label>Campaign Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>