force-app/main/default/objects/Contact/fields/Cancellation_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Explanation__c</fullName>
    <label>Cancellation Explanation</label>
    <length>31072</length>
    <type>LongTextArea</type>
</CustomField>