force-app/main/default/objects/Contact/fields/CancellationSurvey_2nd_Interview__c.field-meta.xml
<CustomField>
    <fullName>CancellationSurvey_2nd_Interview__c</fullName>
    <formula>IF(FIND( &quot;I&apos;d be willing to participate in a short interview about my experience with SimilarWeb&quot;, Survey_reason_for_cancelling__c )=0, 
&quot;&quot;, 
IF(FIND(&apos;&quot;,&quot;&apos;,Survey_reason_for_cancelling__c,FIND( &quot;I&apos;d be willing to participate in a short interview about my experience with SimilarWeb&quot;, Survey_reason_for_cancelling__c )+5 )=0, 
RIGHT(LEFT(Survey_reason_for_cancelling__c, LEN(Survey_reason_for_cancelling__c)-2), 
LEN(Survey_reason_for_cancelling__c)- FIND(&quot;I&apos;d be willing to participate in a short interview about my experience with SimilarWeb&quot;,Survey_reason_for_cancelling__c)-90) 
, 
RIGHT(LEFT(Survey_reason_for_cancelling__c , FIND(&apos;&quot;,&quot;&apos;,Survey_reason_for_cancelling__c,FIND( &quot;I&apos;d be willing to participate in a short interview about my experience with SimilarWeb&quot;, Survey_reason_for_cancelling__c )+17 )-2), 
FIND(&apos;&quot;,&quot;&apos;,Survey_reason_for_cancelling__c,FIND( &quot;I&apos;d be willing to participate in a short interview about my experience with SimilarWeb&quot;, Survey_reason_for_cancelling__c )+17 )-FIND( &quot;I&apos;d be willing to participate in a short interview about my experience with SimilarWeb&quot;, Survey_reason_for_cancelling__c )-90) 
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CancellationSurvey 2nd Interview</label>
    <type>Text</type>
</CustomField>