force-app/main/default/objects/Contact/fields/CancellationSurvey_Date__c.field-meta.xml
<CustomField>
    <fullName>CancellationSurvey_Date__c</fullName>
    <label>CancellationSurvey Date</label>
    <type>Date</type>
</CustomField>