force-app/main/default/objects/Contact/fields/CancellationSurvey_OtherSolution__c.field-meta.xml
<CustomField>
    <fullName>CancellationSurvey_OtherSolution__c</fullName>
    <formula>IF(FIND( &quot;What is better about the other solution?&quot;, Survey_reason_for_cancelling__c )=0, 
&quot;&quot;, 
IF(FIND(&apos;&quot;,&quot;&apos;,Survey_reason_for_cancelling__c,FIND( &quot;What is better about the other solution?&quot;, Survey_reason_for_cancelling__c )+5 )=0, 
RIGHT(LEFT(Survey_reason_for_cancelling__c, LEN(Survey_reason_for_cancelling__c)-2), 
LEN(Survey_reason_for_cancelling__c)- FIND(&quot;What is better about the other solution?&quot;,Survey_reason_for_cancelling__c)-44) 
, 
RIGHT(LEFT(Survey_reason_for_cancelling__c , FIND(&apos;&quot;,&quot;&apos;,Survey_reason_for_cancelling__c,FIND( &quot;What is better about the other solution?&quot;, Survey_reason_for_cancelling__c )+17 )-2), 
FIND(&apos;&quot;,&quot;&apos;,Survey_reason_for_cancelling__c,FIND( &quot;What is better about the other solution?&quot;, Survey_reason_for_cancelling__c )+17 )-FIND( &quot;What is better about the other solution?&quot;, Survey_reason_for_cancelling__c )-44)
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CancellationSurvey OtherSolution</label>
    <type>Text</type>
</CustomField>