force-app/main/default/objects/Contact/fields/CancellationSurvey_Reconsider_if__c.field-meta.xml
<CustomField>
    <fullName>CancellationSurvey_Reconsider_if__c</fullName>
    <formula>IF(FIND( &quot;I would reconsider cancelling if&quot;, Survey_reason_for_cancelling__c )=0, 
&quot;&quot;, 
IF(FIND(&apos;&quot;,&quot;&apos;,Survey_reason_for_cancelling__c,FIND( &quot;I would reconsider cancelling if&quot;, Survey_reason_for_cancelling__c )+5 )=0, 
RIGHT(LEFT(Survey_reason_for_cancelling__c, LEN(Survey_reason_for_cancelling__c)-2), 
LEN(Survey_reason_for_cancelling__c)- FIND(&quot;I would reconsider cancelling if&quot;,Survey_reason_for_cancelling__c)-37) 
, 
RIGHT(LEFT(Survey_reason_for_cancelling__c , FIND(&apos;&quot;,&quot;&apos;,Survey_reason_for_cancelling__c,FIND( &quot;I would reconsider cancelling if&quot;, Survey_reason_for_cancelling__c )+17 )-2), 
FIND(&apos;&quot;,&quot;&apos;,Survey_reason_for_cancelling__c,FIND( &quot;I would reconsider cancelling if&quot;, Survey_reason_for_cancelling__c )+17 )-FIND( &quot;I would reconsider cancelling if&quot;, Survey_reason_for_cancelling__c )-37) 
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CancellationSurvey Reconsider if</label>
    <type>Text</type>
</CustomField>