force-app/main/default/objects/Contact/fields/CancellationSurvey_Why__c.field-meta.xml
<CustomField>
    <fullName>CancellationSurvey_Why__c</fullName>
    <formula>IF(FIND( &quot;Can we ask why?&quot;, Survey_reason_for_cancelling__c )=0, 
&quot;&quot;, 
IF(FIND(&apos;&quot;,&quot;&apos;,Survey_reason_for_cancelling__c,FIND( &quot;Can we ask why?&quot;, Survey_reason_for_cancelling__c )+5)=0, 
RIGHT(LEFT(Survey_reason_for_cancelling__c, LEN(Survey_reason_for_cancelling__c)-2), 
LEN(Survey_reason_for_cancelling__c)- FIND(&quot;Can we ask why?&quot;,Survey_reason_for_cancelling__c)-19) 
, 
RIGHT(LEFT(Survey_reason_for_cancelling__c , FIND(&apos;&quot;,&quot;&apos;,Survey_reason_for_cancelling__c,FIND( &quot;Can we ask why?&quot;, Survey_reason_for_cancelling__c )+17)-1), 
FIND(&apos;&quot;,&quot;&apos;,Survey_reason_for_cancelling__c,FIND( &quot;Can we ask why?&quot;, Survey_reason_for_cancelling__c )+17)-FIND( &quot;Can we ask why?&quot;, Survey_reason_for_cancelling__c )-18) 
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CancellationSurvey Why</label>
    <type>Text</type>
</CustomField>