force-app/main/default/objects/Contact/fields/CancellationSurvey_WhyOther__c.field-meta.xml
<CustomField>
    <fullName>CancellationSurvey_WhyOther__c</fullName>
    <formula>IF(FIND( &quot;Why?&quot;, Survey_reason_for_cancelling__c,25 )=0, 
&quot;&quot;, 
IF(FIND(&apos;&quot;,&quot;&apos;,Survey_reason_for_cancelling__c,FIND( &quot;Why?&quot;, Survey_reason_for_cancelling__c,25 )+5 )=0, 
RIGHT(LEFT(Survey_reason_for_cancelling__c, LEN(Survey_reason_for_cancelling__c)-2), 
LEN(Survey_reason_for_cancelling__c)- FIND(&quot;Why?&quot;,Survey_reason_for_cancelling__c,25)-8) 
, 
RIGHT(LEFT(Survey_reason_for_cancelling__c , FIND(&apos;&quot;,&quot;&apos;,Survey_reason_for_cancelling__c,FIND( &quot;Why?&quot;, Survey_reason_for_cancelling__c,25 )+10 )-2), 
FIND(&apos;&quot;,&quot;&apos;,Survey_reason_for_cancelling__c,FIND( &quot;Why?&quot;, Survey_reason_for_cancelling__c, 25 )+10 )-FIND( &quot;Why?&quot;, Survey_reason_for_cancelling__c, 25 )-8) 
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CancellationSurvey WhyOther</label>
    <type>Text</type>
</CustomField>