force-app/main/default/objects/Contact/fields/Category_Rank__c.field-meta.xml
<CustomField>
    <fullName>Category_Rank__c</fullName>
    <formula>Account.sw_connector__swId__r.sw_connector__Category_Rank__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SI Category Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>