force-app/main/default/objects/Contact/fields/Challenge_registration__c.field-meta.xml
<CustomField>
    <fullName>Challenge_registration__c</fullName>
    <label>Challenge (registration)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>