force-app/main/default/objects/Contact/fields/Chilipiper_Medium__c.field-meta.xml
<CustomField>
    <fullName>Chilipiper_Medium__c</fullName>
    <description>Use this field to pass UTMs from chilipiper campaigns to Salesforce.
MIS-1990</description>
    <label>Chilipiper Medium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>