force-app/main/default/objects/Contact/fields/Closed_Tasks_Counter__c.field-meta.xml
<CustomField>
    <fullName>Closed_Tasks_Counter__c</fullName>
    <label># Closed Tasks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>