force-app/main/default/objects/Contact/fields/Comment_registration__c.field-meta.xml
<CustomField>
    <fullName>Comment_registration__c</fullName>
    <label>Comment (registration)</label>
    <type>TextArea</type>
</CustomField>