force-app/main/default/objects/Contact/fields/Commercial_Role__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Role__c</fullName>
    <label>Commercial Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Decision Maker / Budget Owner</fullName>
            </value>
            <value>
                <fullName>End User</fullName>
            </value>
            <value>
                <fullName>Economic Buyer</fullName>
            </value>
            <value>
                <fullName>champion</fullName>
                <label>Champion</label>
            </value>
            <value>
                <fullName>Procurement / Administrative</fullName>
                <label>Procurement / Legal</label>
            </value>
            <value>
                <fullName>Blocker | Anti-Champion</fullName>
            </value>
            <value>
                <fullName>Influencer</fullName>
            </value>
            <value>
                <fullName>Gatekeeper</fullName>
            </value>
            <value>
                <fullName>Advocate</fullName>
                <isActive>false</isActive>
                <label>Advocate</label>
            </value>
            <value>
                <fullName>Approver</fullName>
                <isActive>false</isActive>
                <label>Approver</label>
            </value>
            <value>
                <fullName>Executive Sponsor</fullName>
                <isActive>false</isActive>
                <label>Executive Sponsor / Economic Buyer</label>
            </value>
            <value>
                <fullName>Team Lead/Influencer</fullName>
                <isActive>false</isActive>
                <label>Team Lead/Influencer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>