force-app/main/default/objects/Contact/fields/Company_Size_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Company_Size_Confidence__c</fullName>
    <description>MIS-4622</description>
    <formula>Account.Company_Size_Confidence__c</formula>
    <label>Company Size Confidence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>