force-app/main/default/objects/Contact/fields/Competitor_Product__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Product__c</fullName>
    <label>Competitor Product</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Comscore</fullName>
            </value>
            <value>
                <fullName>SEMRush</fullName>
            </value>
            <value>
                <fullName>AppAnnie</fullName>
            </value>
            <value>
                <fullName>Hitwise</fullName>
            </value>
            <value>
                <fullName>Alexa</fullName>
            </value>
            <value>
                <fullName>Jumpshot</fullName>
            </value>
            <value>
                <fullName>Ahrefs</fullName>
            </value>
            <value>
                <fullName>Clearbit</fullName>
            </value>
            <value>
                <fullName>Datanyze</fullName>
            </value>
            <value>
                <fullName>Datafox</fullName>
            </value>
            <value>
                <fullName>Moz</fullName>
            </value>
            <value>
                <fullName>Searchmetrics</fullName>
            </value>
            <value>
                <fullName>Spyfu</fullName>
            </value>
            <value>
                <fullName>Brightedge</fullName>
            </value>
            <value>
                <fullName>Conductor</fullName>
            </value>
            <value>
                <fullName>Clavis</fullName>
            </value>
            <value>
                <fullName>OneClickRetail</fullName>
            </value>
            <value>
                <fullName>Profitero</fullName>
            </value>
            <value>
                <fullName>7Park Data</fullName>
            </value>
            <value>
                <fullName>Sensor Tower</fullName>
            </value>
            <value>
                <fullName>Adbeat</fullName>
            </value>
            <value>
                <fullName>AdClarity</fullName>
            </value>
            <value>
                <fullName>Pathmatics</fullName>
            </value>
            <value>
                <fullName>Moat</fullName>
            </value>
            <value>
                <fullName>SimilarTech</fullName>
            </value>
            <value>
                <fullName>Builtwith</fullName>
            </value>
            <value>
                <fullName>Pitchbook</fullName>
            </value>
            <value>
                <fullName>Crunchbase</fullName>
            </value>
            <value>
                <fullName>Insideview</fullName>
            </value>
            <value>
                <fullName>Thinknum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>